add dockerfile info

--- a/docker/docker.org
+++ b/docker/docker.org
@@ -45,7 +45,7 @@
 * Команды и флаги
 ** docker run
 Команда =docker run= используется для запуска контейнера. Это основная и потому наиболее часто используемая команда.
-#+begin_verse
+#+begin_src
 # сигнатура
 docker run [OPTIONS] IMAGE[:TAG|@DIGEST] [COMMAND] [ARG...]
 # основные настройки (флаги)
@@ -63,62 +63,62 @@ docker run [OPTIONS] IMAGE[:TAG|@DIGEST] [COMMAND] [ARG...]
 # например
 -v mydb:/etc/mydb
 -w - установка рабочей директории
-#+end_verse
+#+end_src
 
 ** docker build
 Команда =docker build= используется для создания образа на основе файла =Dockerfile= и =контекста=.
 =Контекст= - это набор файлов, находящихся в локации, определенной с помощью =PATH= или =URL=.
 =PATH= - это директория в нашей локальной системе, а =URL= - это удаленный репозиторий. =Контекст= сборки обрабатывается рекурсивно, поэтому =PATH= включает как директорию, там и все ее поддиректории, а =URL= - как репозиторий, так и все его субмодули.
 Для исключения файлов из сборки образа используется =.dockerignore= (синтаксис этого файла похож на =.gitignore=).
-#+begin_verse
+#+begin_src
 # сигнатура
 docker build [OPTIONS] PATH | URL | -
-#+end_verse
+#+end_src
 
 Создание образа:
-#+begin_verse
+#+begin_src
 # в качестве контекста сборки используется текущая директория
 docker build .
-#+end_verse
+#+end_src
 
 Использование репозитория в качестве контекста (предполагается, что =Dockerfile= находится в корневой директории репозитория):
-#+begin_verse
+#+begin_src
 docker build github.com/creack/docker-firefox
-#+end_verse
+#+end_src
 
-#+begin_verse
+#+begin_src
 docker build -f ctx/Dockerfile http://server/ctx.tar.gz
-#+end_verse
+#+end_src
 В данном случае http://server/ctx.tar.gz отправляется демону, которые загружает и извлекает файлы. Параметр =-f ctx/Dockerfile= определяет путь к =Dockerfile= внутри =ctx.tar.gz=.
 
 Чтение =Dockerfile= из =STDIN= без контекста:
-#+begin_verse
+#+begin_src
 docker build - < Dockerfile
-#+end_verse
+#+end_src
 
 Добавление тега к образу:
-#+begin_verse
+#+begin_src
 docker build -t myname/my-image:latest .
-#+end_verse
+#+end_src
 
 Определение =Dockerfile=:
-#+begin_verse
+#+begin_src
 docker build -f Dockerfile.debug .
-#+end_verse
+#+end_src
 
 Экспорт файлов сборки в директорию =out=:
-#+begin_verse
+#+begin_src
 docker build -o out .
-#+end_verse
+#+end_src
 
 Экспорт файлов сборки в файл =out.tar=:
-#+begin_verse
+#+begin_src
 docker build -o - . > out.tar
-#+end_verse
+#+end_src
 
 ** docker exec
 Команда =docker exec= используется для выполнения команды в запущенном контейнере.
-#+begin_verse
+#+begin_src
 # сигнатура
 docker exec [OPTIONS] CONTAINER COMMAND [ARG...]
 # основные флаги
@@ -127,18 +127,18 @@ docker exec [OPTIONS] CONTAINER COMMAND [ARG...]
 -i - оставить `STDIN` открытым
 -t - выделение псевдотерминала
 -w - определение рабочей директории внутри контейнера
-#+end_verse
+#+end_src
 
 Пример:
-#+begin_verse
+#+begin_src
 # -U - это пользователь, которым по умолчанию является root
 docker exec -it postgres psql -U postgres
-#+end_verse
+#+end_src
 
 ** docker ps
 Команда =docker ps= используется для получения списка (по умолчанию только запущенных) контейнеров.
 
-#+begin_verse
+#+begin_src
 # сигнатура
 docker ps [OPTIONS]
 # основные флаги
@@ -148,12 +148,12 @@ docker ps [OPTIONS]
 -l - показать последний созданный контейнер
 # пример получения списка приостановленных контейнеров
 docker ps -f 'status=paused'
-#+end_verse
+#+end_src
 
 Для получения списка образов используется команда =docker images=.
 
 ** Команды управления
-
+#+begin_src
 # запуск остановленного контейнера
 docker start CONTAINER
 
@@ -194,20 +194,248 @@ docker network COMMAND
 
 # управление docker
 docker system COMMAND
-
+#+end_src
 ** Другие команды
 Для получения логов запущенного контейнера используется команда =docker logs=:
-
+#+begin_src
 docker logs [OPTIONS] CONTAINER
 # основные флаги
 -f - следование за выводом
 -n - n последних строк
-
+#+end_src
 Для удаления всех неиспользуемых данных (контейнеры, сети, образы и, опционально, тома) используется команда =docker system prune=. Основные флаги:
-
+#+begin_src
 -a - удаление всех неиспользуемых образов, а не только обособленных (dangling)
 --volumes - удаление томов
+#+end_src
 
 *Предостережение*: применять эту команду следует с крайней осторожностью, поскольку удаленные данные не подлежат восстановлению.
 
 [[https://docs.docker.com/reference/cli/docker/][Полный список команд и флагов.]]
+
+* Dockerfile
+=Dockerfile= - это документ (без расширения), содержащий инструкции, которые используются для создания образа при выполнении команды =docker build=.
+*Предостережение:* не используйте / в качестве =PATH= для контекста сборки. Это приведет к передаче демону всего содержимого жесткого диска вашей машины.
+Инструкции выполняются по одной. Результаты наиболее важных инструкций фиксируются в виде отдельных слоев образа. Обратите внимание: каждая инструкция выполняется независимо от других. Это означает, что выполнение =RUN cd /tmp= не будет иметь никакого эффекта для последующих инструкций.
+
+=Dockerfile= может содержать следующие инструкции:
+#+begin_src
+# Комментарий
+ИНСТРУКЦИЯ аргументы
+
+# Основные
+# FROM - родительский образ
+FROM <image>[:<tag>] [AS <name>]
+# пример
+FROM node:12-alpine AS build
+
+# WORKDIR - установка рабочей директории для инструкций RUN, CMD, ENTRYPOINT, COPY и ADD
+WORKDIR /path/to/dir
+# пример
+WORKDIR /app
+
+# COPY - копирование новых файлов или директорий из <src>
+# и их добавление в файловую систему образа по адресу, указанному в <dest>
+COPY <src> <dest>
+COPY ["<src>", "<dest>"]
+# пример
+COPY package.* yarn.lock ./
+# или
+COPY . .
+# ADD, в отличие от COPY, позволяет копировать удаленные файлы,
+# а также автоматически распаковывает сжатые (identity, gzip, bzip2 или xz) локальные файлы
+
+# ADD - копирование новых файлов, директорий или удаленного (!) файла из <src>
+# и их добавление в файловую систему образа по адресу, указанному в <dest>
+ADD <src> <dest>
+ADD ["<src>", "<dest>"]
+# пример
+ADD some.txt some_dir/ # <WORKING_DIR>/some_dir/
+
+# RUN - выполнение команды в новом слое на основе текущего образа и фиксация результата
+RUN <command>
+# или
+RUN ["executable", "arg1", "arg2"] # Кавычки должны быть двойными
+# пример
+RUN npm install
+
+# CMD - предоставление дефолтных значений исполняемому контейнеру
+CMD ["executable", "arg1", "arg2"]
+# или если данной инструкции предшествует инструкция ENTRYPOINT
+CMD ["arg1", "arg2"]
+# или
+CMD command arg1 arg2
+# пример
+CMD [ "node", "/app/src/index.js" ]
+# RUN выполняет команду и фиксирует результат,
+# CMD ничего не выполняет во время сборки, а определяет команду для образа
+# (!) выполняется только одна (последняя) инструкция CMD
+
+# ENTRYPOINT - настройка исполняемого контейнера
+ENTRYPOINT ["executable", "arg1", "arg2"]
+ENTRYPOINT command arg1 arg2
+# пример
+ENTRYPOINT ["top", "-b"]
+CMD ["-c"]
+# docker run -it --rm --name test top -H
+# top -b -H
+# разница между ENTRYPOINT и CMD:
+# https://docs.docker.com/engine/reference/builder/#understand-how-cmd-and-entrypoint-interact
+# https://stackoverflow.com/questions/21553353/what-is-the-difference-between-cmd-and-entrypoint-in-a-dockerfile
+
+# переменные
+# ${var} или $var
+# пример
+FROM busybox
+ENV FOO=/bar
+WORKDIR ${FOO}    # WORKDIR /bar
+ADD . $FOO        # ADD . /bar
+COPY \$FOO /qux   # COPY $FOO /qux
+
+# Другие
+# LABEL - добавление метаданных к образу
+LABEL <key>=<value>
+# пример
+LABEL version="1.0"
+
+# EXPOSE - информация о сетевом порте, прослушиваемом контейнером во время выполнения
+EXPOSE <port> | <port>/<protocol>
+# пример
+EXPOSE 3000
+
+# ENV - установка переменных среды окружения
+ENV <key>=<value>
+# пример
+ENV MY_NAME="No Name"
+
+# VOLUME - создание точки монтирования
+VOLUME ["/var/log"]
+VOLUME /var/log
+
+# USER - установка пользователя для использования при запуске контейнера
+# в любых инструкциях RUN, CMD и ENTRYPOINT
+USER <user>[:<group>]
+USER <UID>[:<GID>]
+
+# ARG - определение переменной, которая может быть передана через командную строку при
+# выполнении команды `docker build` с помощью флага `--build-arg <name>=<value>`
+ARG <name>[=<default value>]
+
+# ONBUILD - добавление в образ триггера, запускаемого при использовании
+# данного образа в качестве основы для другой сборки
+ONBUILD <INSTRUCTION>
+#+end_src
+
+[[https://docs.docker.com/reference/dockerfile/][Справка по Dockerfile]]
+
+* Рекомендации по Dockerfile
+Рассмотрим следующий =Dockerfile=:
+#+begin_src
+# syntax=docker/dockerfile:1
+FROM ubuntu:18.04
+COPY . /app
+RUN make /app
+CMD python /app/app.py
+#+end_src
+
+Выполнение каждой инструкции (кроме =CMD=) из этого файла приводит к созданию нового слоя:
++ =FROM= создает слой из образа =ubuntu:18.04=
++ =COPY= добавляет файлы из текущей директории
++ =RUN= собирает приложение с помощью make
++ =CMD= определяет команду для запуска приложения в контейнере
+При запуске образа и генерации контейнера мы добавляем новый слой, доступный для записи, поверх остальных. Все изменения в запущенном контейнере, такие как создание новых файлов, их модификация или удаление записываются в этот слой.
+
+** Создание эфемерных контейнеров
+Генерируемые контейнеры должны быть максимально эфемерными. Под эфемерностью понимается возможность остановки, уничтожения, повторной сборки и замены контейнеров без необходимости дополнительной настройки процесса их генерации.
+
+** Понимание контекста сборки
+При выполнении команды =docker build= контекстом сборки, как правило, является текущая директория. Предполагается, что =Dockerfile= находится в этой директории. Путь к =Dockerfile=, находящемуся в другом месте, можно указать с помощью флага -f. Независимо от того, где находится =Dockerfile=, все файлы и директории из текущей директории отправляются демону в качестве контекста сборки.
+
+В следующем примере мы
++ создаем (=mkdir=) директорию =myapp=, которая используется в качестве контекста сборки
++ переходим в нее (=cd=)
++ создаем файл =hello= с текстом "hello"
++ создаем =Dockerfile=, читающий (=cat=) содержимое файла =hello=
++ собираем образ с тегом =helloapp:v1=
+#+begin_src
+mkdir myapp && cd myapp
+echo "hello" > hello
+echo -e "FROM busybox\nCOPY /hello /\nRUN cat /hello" > Dockerfile
+docker build -t helloapp:v1 .
+#+end_src
+
+Размещаем =Dockerfile= и =hello= в разных директориях и собираем вторую версию образа без использования кеша предыдущей сборки (-f определяет путь к =Dockerfile=):
+#+begin_src
+# создаем директории
+mkdir -p dockerfiles context
+# перемещаем файлы
+mv Dockerfile dockerfiles && mv hello context
+# собираем образ
+docker build --no-cache -t helloapp:v2 -f dockerfiles/Dockerfile context
+#+end_src
+
+** .dockerignore
+В файле =.dockerignore= указываются файлы, не имеющие отношения к сборке и поэтому не включаемые в нее. Синтаксис =.dockerignore= похож на синтаксис =.gitignore= или =.npmignore=.
+
+** Многоэтапная сборка
+Многоэтапная сборка позволяет существенно уменьшить размер финального образа без необходимости изучения процесса сборки на предмет наличия промежуточных слоев и файлов, которые можно удалить.
+Если процесс сборки состоит из нескольких слоев, мы можем упорядочить их от редко модифицируемых до часто модифицируемых:
++ установка инструментов, необходимых для сборки приложения
++ установка или обновление зависимостей
++ генерация приложения
+
+Пример =Dockerfile= для Go-приложения:
+#+begin_src
+# syntax=docker/dockerfile:1
+FROM golang:1.16-alpine AS build
+
+# устанавливаем инструменты
+# выполняем `docker build --no-cache .` для обновления зависимостей
+RUN apk add --no-cache git
+RUN go get github.com/golang/dep/cmd/dep
+
+# список зависимостей из `Gopkg.toml` и `Gopkg.lock`
+# эти слои будут собираться повторно только при изменении файлов `Gopkg`
+COPY Gopkg.lock Gopkg.toml /go/src/project/
+WORKDIR /go/src/project/
+# устанавливаем зависимости
+RUN dep ensure -vendor-only
+
+# копируем проект и собираем его
+# этот слой будет собираться повторно только при изменении файлов из директории `project`
+COPY . /go/src/project/
+RUN go build -o /bin/project
+
+# получаем образ, состоящий из одного слоя
+FROM scratch
+COPY --from=build /bin/project /bin/project
+ENTRYPOINT ["/bin/project"]
+CMD ["--help"]
+#+end_src
+
+** Лишние библиотеки
+Для уменьшения сложности, количества зависимостей и времени сборки следует избегать установки дополнительных и ненужных библиотек "на всякий случай".
+
+** Разделение приложений
+Каждый контейнер должен иметь одну ответственность (=single responsibility=).
+Разделение приложений на несколько контейнеров облегчает горизонтальное масштабирование и переиспользуемость контейнеров.
+Например, стек веб-приложения может состоять из 3 отдельных контейнеров, каждый со своим уникальным образом, для управления приложением, базы данных и сервера или распределенного кеша, хранящегося в памяти. Если контейнеры зависят друг от друга для обеспечения возможности их коммуникации следует использовать сети.
+
+** Минимизация количества слоев
+В старых версиях =Docker= каждая инструкция в =Dockerfile= приводила к созданию нового слоя. Сейчас новые слои создаются только инструкциями =RUN=, =COPY= и =ADD=. Другие инструкции создают временные промежуточные образы, которые не приводят к увеличению размера сборки.
+
+** Сортировка многострочных аргументов
+Многострочные аргументы рекомендуется сортировать в алфавитном порядке. Также рекомендуется добавлять пробел перед обратным слэшем (\).
+Пример:
+#+begin_src
+RUN apt-get update && apt-get install -y \
+ bzr \
+ cvs \
+ git \
+ mercurial \
+ subversion \
+ && rm -rf /var/lib/apt/lists/*
+#+end_src
+
+** Использование кеша сборки
+При сборке образа =Docker= изучает все инструкции в порядке, определенном в =Dockerfile=. После изучения инструкции =Docker= обращается к своему кешу. Если в кеше имеется соответствующий образ, новый образ не создается. Для сборки образа без обращения к кешу используется настройка =--no-cache=true=.
