add some docker notes

--- a/docker/docker.org
+++ b/docker/docker.org
@@ -33,6 +33,7 @@
 
 * Объекты
 При использовании =Docker= мы создаем и используем =образы=, =контейнеры=, =сети=, =тома=, =плагины= и другие объекты. Рассмотрим некоторые из них.
+
 ** Образы (Images)
 =Образ= - это доступный только для чтения шаблон с инструкциями по созданию контейнера. Часто образ представляет собой модификацию другого образа.
 Можно создавать свои образы или использовать образы, созданные другими и опубликованные в =реестре=. Для создания образа используется =Dockerfile=, содержащий инструкции по созданию образа и его запуску (см. ниже). Ряд инструкций в =Dockerfile= приводит к созданию в образе нового =слоя= (раньше новый слой создавался для каждой инструкции). При изменении =Dockerfile= и повторной сборке образа пересобираются только модифицированные слои. Это делает образы легковесными, маленькими и быстрыми.
@@ -439,3 +440,79 @@ RUN apt-get update && apt-get install -y \
 
 ** Использование кеша сборки
 При сборке образа =Docker= изучает все инструкции в порядке, определенном в =Dockerfile=. После изучения инструкции =Docker= обращается к своему кешу. Если в кеше имеется соответствующий образ, новый образ не создается. Для сборки образа без обращения к кешу используется настройка =--no-cache=true=.
+
+* Рекомендации по инструкциям
+** FROM
+В качестве основы для создания образа рекомендуется использовать официальные образы из =DockerHub= версии =alpine=.
+
+** LABEL
+Подписи позволяют структурировать образы проекта, добавлять информацию о лицензиях, могут использоваться для автоматизации и т.д.
+#+begin_src
+# одна подпись
+LABEL com.example.version="0.0.1-beta"
+# несколько подписей
+LABEL vendor=ACME\ Incorporated \
+     com.example.is-beta= \
+     com.example.is-production="" \
+     com.example.version="0.0.1-beta" \
+     com.example.release-date="2021-01-12"
+#+end_src
+
+** RUN
+Длинные и сложные инструкции =RUN= рекомендуется разделять на несколько строк с помощью обратного слэша (\). Это делает =Dockerfile= более читаемым, облегчает его понимание и поддержку.
+#+begin_src
+RUN apt-get update && apt-get install -y \
+   package-bar \
+   package-baz \
+   package-foo  \
+   && rm -rf /var/lib/apt/lists/*
+#+end_src
+
+** CMD
+Инструкция =CMD= используется для запуска программ в контейнере вместе с аргументами.
+=CMD= должна использоваться в форме =CMD ["executable", "param1", "param2"]=. В большинстве случаев первым элементом должен быть интерактивный терминал, такой как =bash=, =python= или =perl=. Например, =CMD ["perl", "-de0"]=, =CMD ["python"]= или =CMD ["php", "-a"]=. При использовании =ENTRYPOINT= следует убедиться, что пользователи понимают, как работает эта инструкция.
+
+** EXPOSE
+Инструкция =EXPOSE= определяет порты, на которых контейнер регистрирует соединения. Рекомендуется использовать порты, которые являются традиционными для приложения. Например, образ, содержащий веб-сервер =Apache=, должен использовать =EXPOSE 80=, а образ, содержащий =MongoDB= - =EXPOSE 27017=.
+
+** ENV
+Для облегчения запуска программы можно использовать =ENV= для обновления переменной среды окружения =PATH= для приложения, устанавливаемого контейнером. Например, =ENV PATH=/usr/local/nginx/bin:$PATH= обеспечивает, что =CMD ["nginx"]= просто работает.
+Инструкция =ENV= также может быть полезна для предоставления обязательных для сервиса переменных, таких как =PGDATA= для =Postgres=.
+Наконец, =ENV= может использоваться для установки номеров версий, что облегчает их обновление.
+
+** ADD или COPY
+Хотя =ADD= и =COPY= имеют похожий функционал, в большинстве случаев следует использовать =COPY=, поскольку эта инструкция является более прозрачной, чем =ADD=. =COPY= поддерживает копирование в контейнер только локальных файлов, а =ADD= также позволяет извлекать файлы из локальных архивов и получать файлы по =URL=, но вместо последнего лучше использовать =curl= или =wget=: это позволяет удалять ненужные файлы после извлечения.
+Если =Dockerfile= состоит из нескольких этапов, на которых используются разные файлы из контекста, эти файлы рекомендуется копировать индивидуально. Это позволяет обеспечить инвалидацию кеша только для модифицированных файлов.
+Например:
+#+begin_src
+COPY package.json /app
+RUN npm i
+# предполагается, что директория node_modules указана в .dockerignore
+COPY . /app
+#+end_src
+
+** ENTRYPOINT
+=ENTRYPOINT= определяет основную команду для образа, что позволяет запускать образ без этой команды.
+Рассмотрим пример образа для инструмента командной строки =s3cmd=:
+#+begin_src
+ENTRYPOINT ["s3cmd"]
+CMD ["--help"]
+#+end_src
+
+Данный образ может быт запущен следующим образом:
+#+begin_src
+docker run s3cmd
+#+end_src
+Это приведет к выводу справки.
+
+Либо мы может передать параметры для выполнения команды:
+#+begin_src
+docker run s3cmd ls s3://mybucket
+#+end_src
+Это может быть полезным при совпадении названия образа со ссылкой на исполняемый файл.
+
+** VOLUME
+Инструкция =VOLUME= следует использовать для доступа к любой области хранения базы данных, хранилищу настроек или файлам/директориям, созданным контейнером. Крайне не рекомендуется использовать =VOLUME= для мутабельных и/или пользовательских частей образа.
+
+** WORKDIR
+Для ясности и согласованности для =WORKDIR= всегда следует использовать абсолютные пути. Также =WORKDIR= следует использовать вместо инструкций типа =RUN cd ... && do-something=, которые трудно читать, отлаживать и поддерживать.
