add some docker info

--- a/docker/docker.org
+++ b/docker/docker.org
@@ -516,3 +516,191 @@ docker run s3cmd ls s3://mybucket
 
 ** WORKDIR
 Для ясности и согласованности для =WORKDIR= всегда следует использовать абсолютные пути. Также =WORKDIR= следует использовать вместо инструкций типа =RUN cd ... && do-something=, которые трудно читать, отлаживать и поддерживать.
+
+* Управление данными
+По умолчанию файлы, создаваемые в контейнере сохраняются в слое, доступном для записи (=writable layer=).
+Это означает следующее:
++ данные существуют только на протяжении жизненного цикла контейнера, и их сложно извлекать из контейнера, когда в них нуждается другой процесс
++ слой контейнера, доступный для записи, тесно связан с хостом, на котором запущен контейнер. Данные нельзя просто взять и переместить в другое место
++ запись в такой слой требует наличия драйвера хранилища (=storage driver=) для управления файловой системой. Эта дополнительная абстракция снижает производительность по сравнению с томами данных (=data volumes=), которые пишут напрямую в файловую систему
+=Docker= предоставляет 2 возможности для постоянного хранения данных на хосте: тома (=volumes=) и =bind mount=. Для пользователей =Linux= также доступен =tmpfs mount=, а для пользователей Windows - =named pipe=.
+
+** Выбор правильного типа монтирования
+Независимо от выбранного типа монтирования, для контейнера данные выглядят одинаково. Они представляют собой директорию или файл в файловой системе контейнера.
+Разница между томами, =bind mount= и =tmpfs mount= заключается в том, где хранятся данные на хосте.
++ тома хранятся в части файловой системы хоста, управляемой =Docker= (=/var/lib/docker/volumes/= на =Linux=). Процессы, не относящиеся к =Docker=, не должны модифицировать эту часть. Тома - лучший способ хранения данных в =Docker=.
++ =bind mount= может храниться в любом месте системы хоста. Это могут быть даже важные системные файлы и директории. Модифицировать их могут любые процессы
++ =tmpfs mount= хранится в памяти и не записывается в файловую систему
+
+[[https://docs.docker.com/engine/storage/][Управление данными в Docker]]
+
+** Тома
+=Тома (Volumes)= - предпочтительный способ хранения данных, генерируемых и используемых контейнерами. Они полностью управляются =Docker=, в отличие от =bind mount=, которые зависят от структуры директории и операционной системы хоста. Преимущества томов состоят в следующем:
++ тома легче восстанавливать и мигрировать
++ томами можно управлять с помощью Docker CLI и Docker API
++ тома работают как в =Linux=, так и в =Windows= контейнерах
++ тома могут более безопасно распределяться между контейнерами
++ движки томов (=volume drivers=) позволяют хранить тома на удаленных хостах и облачных провайдерах, шифровать содержимое томов или добавлять в них новый функционал
++ содержимое новых томов может заполняться (=population=) контейнером
++ тома имеют более высокую производительность
+
+Тома также являются более предпочтительными перед хранением данных в слое контейнера, доступном для записи, поскольку тома не увеличивают размер контейнера. Содержимое контейнера существует за пределами жизненного цикла контейнера.
+
+** Флаги -v и --mount
+=--mount= является более явным и многословным. Основное отличие состоит в том, что при использовании =-v= все настройки комбинируются вместе, а при использовании =--mount= они указываются раздельно.
+Движок тома может быть определен только с помощью =--mount=.
+
++ =-v= или =--volume=: состоит из 3 полей, разделенных двоеточием (:). Поля должны указываться в правильном порядке. Значение каждого поля не является очевидным
++ в случае именованных томов первое поле - это название тома, которое является уникальным в пределах хоста. В случае анонимных томов это поле опускается
++ второе поле - это путь файла или директории, монтируемой в контейнере
++ третье поле является опциональным и представляет собой разделенный запятыми список настроек, таких как ro
++ =--mount=: состоит из нескольких пар ключ/значение, разделенных запятыми. Синтаксис =--mount= является более многословным, зато порядок ключей не имеет значения, а значения ключей являются более очевидными
++ =type=: тип монтирования, может иметь значение =bind=, =volume= или =tmpfs=
++ =source=: источник монтирования. Для именованных томов - это название тома. Для анонимных может быть опущено. Может определяться как =source= или =src=
++ =destination=: путь монтируемого в контейнере файла или директории. Может определяться как =destination=, =dst= или =target=
++ =readonly=: если указана данная настройка, том будет доступен только для чтения. Может определяться как =readonly= или =ro=
++ =volume-opt=: данная настройка может определяться несколько раз, принимая пары название настройки/ее значение
+
+=-v= и =--mount= принимают одинаковые настройки. При использовании томов с сервисами, доступен только флаг =--mount=.
+
+** Создание и управление томами
+В отличие от =bind mount=, тома могут создаваться и управляться за пределами любого контейнера.
+
+Создание тома
+#+begin_src
+docker volume create my-vol
+#+end_src
+
+Список томов
+#+begin_src
+docket volume ls
+#+end_src
+
+Анализ тома
+#+begin_src
+docker volume inspect my-vol
+#+end_src
+
+Удаление тома
+#+begin_src
+docker volume rm my-vol
+#+end_src
+
+** Запуск контейнера с томом
+При запуске контейнера с несуществующим томом, он создается автоматически. В следующем примере том =myvol2= монтируется в директорию =app= контейнера:
+#+begin_src
+docker run -d \
+ --name devtest \
+ -v myvol2:/app \
+ nginx:latest
+
+# или
+docker run -d \
+ --name devtest \
+ --mount source=myvol2,target=/app \
+ nginx:latest
+# далее будет использоваться только `-v`
+#+end_src
+В данном случае том будет доступен как для чтения, так и для записи.
+
+** Использование тома с Docker Compose
+Единичный сервис (=single service=) =Compose= с томом может выглядеть так:
+#+begin_src
+version: "1.0"
+services:
+ frontend:
+   image: node:lts
+   volumes:
+     - myapp:/home/node/app
+volumes:
+ myapp:
+#+end_src
+Том будет создан при первом вызове =docker compose up=. При последующих вызовах данный том будет использоваться повторно.
+
+Том может быть создан отдельно с помощью =docker volume create=. В этом случае в =docker-compose.yml= может быть указана ссылка на внешний (=external=) том:
+#+begin_src
+version: "1.0"
+services:
+ frontend:
+   image: node:lts
+   volumes:
+     - myapp:/home/node/app
+volumes:
+ myapp:
+   external: true
+#+end_src
+
+** Популяция тома с помощью контейнера
+При запуске нового контейнера, создающего том, когда контейнер содержит файлы и директории в монтируемой директории, содержимое этой директории копируется в том. После этого контейнер монтирует и использует том. Другие контейнеры, использующие том, будут иметь доступ к его предварительно заполненному (=pre-populated=) содержимому.
+
+В следующем примере мы создаем контейнер =nginxtest= и заполняем новый том =nginx-vol= содержимым из директории /usr/share/nginx/html, в которой хранится дефолтная разметка:
+#+begin_src
+docker run -d \
+ --name=nginxtest \
+ -v nginx-vol:/usr/share/nginx/html \
+ nginx:latest
+#+end_src
+
+Пример монтирования тома, доступного только для чтения
+#+begin_src
+# :ro
+docker run -d \
+ --name=nginxtest \
+ -v nginx-vol:/usr/share/nginx/html:ro \
+ nginx:latest
+
+#+end_src
+
+** Резервное копирование, восстановление и передача данных томов
+Для создания контейнера, монтирующего определенный том, используется флаг =--volumes-from=.
+
+~Резервное копирование тома~
+Создаем контейнер =dbstore=:
+#+begin_src
+docker run -v /dbdata --name dbstore ubuntu /bin/bash
+#+end_src
+
+Следующая команда
++ запускает новый контейнер и монтирует в него том из контейнера =dbstore=
++ монтирует директорию из локального хоста как =/backup=
++ передает команду для архивации содержимого тома =dbdata= в файл =backup.tar= в директории =/backup=:
+#+begin_src
+docker run --rm \
+ --volumes-from dbstore \
+ -v $(pwd):/backup \
+ ubuntu tar \
+ cvf /backup/backup.tar /dbdata
+#+end_src
+
+~Восстановление данных тома~
+Создаем новый контейнер:
+#+begin_src
+docker run -d \
+ -v /dbdata \
+ --name dbstore2 \
+ ubuntu /bin/bash
+#+end_src
+
+Распаковываем архив в том нового контейнера:
+#+begin_src
+docker run --rm \
+ --volumes-from dbstore2 \
+ -v $(pwd):/backup \
+ ubuntu bash -c \
+ "cd /dbdata && tar xvf /backup/backup.tar --strip 1"
+#+end_src
+
+~Удаление томов~
+Данные томов сохраняются после удаления контейнеров.
+Существует 2 типа томов:
++ именованные: имеют определенный источник за пределами контейнера, например, =awesome:/foo=
++ анонимные: не имеют определенного источника, поэтому при удалении контейнера демону следует передавать инструкции по их удалению
+
+Для удаления анонимного контейнера можно использовать флаг =--rm=. Например, здесь мы создаем анонимный том =/foo= и именованный том =awesome:/bar=:
+#+begin_src
+docker run --rm -v /foo -v awesome:/bar busybox top
+#+end_src
+
+После удаления этого контейнера будет удален только том =/foo=.
+Для удаления всех неиспользуемых томов используется команда =docker volume prune=.
+Более подробную информацию о томах можно получить [[https://docs.docker.com/engine/storage/volumes/][здесь]].
