add docker network info

--- a/docker/docker.org
+++ b/docker/docker.org
@@ -704,3 +704,199 @@ docker run --rm -v /foo -v awesome:/bar busybox top
 После удаления этого контейнера будет удален только том =/foo=.
 Для удаления всех неиспользуемых томов используется команда =docker volume prune=.
 Более подробную информацию о томах можно получить [[https://docs.docker.com/engine/storage/volumes/][здесь]].
+
+* Сети
+=Сети= (=Networks=) позволяют контейнерам общаться между собой. Сетевой интерфейс Docker не зависит от платформы.
+Основная функциональность сетей представлена следующими драйверами:
++ =bridge= (мост): дефолтный сетевой драйвер. Такие сети, как правило, используются, когда приложение состоит из нескольких автономных контейнеров, которые должны иметь возможность общаться между собой
++ =host=: этот драйвер также предназначен для автономных контейнеров, он позволяет использовать сети хоста напрямую, удаляя изоляцию между контейнером и хостом
++ =overlay= (перекрытие): такие сети объединяют нескольких демонов вместе и позволяют групповым сервисам (=swarm services=) взаимодействовать друг с другом. Эти сети также могут использоваться для обеспечения коммуникации между групповым сервисом и отдельным контейнером или между двумя автономными контейнерами на разных демонах
++ =ipvlan=: такая сеть предоставляет пользователю полный контроль над адресацией IPv4 и IPv6
++ =macvlan=: этот драйвер позволяет присваивать контейнеру MAC-адрес, в результате чего контейнер появляется в сети как физическое устройство
++ =none=: отключает сети для данного контейнера. Обычно, используется в дополнение к кастомному сетевому драйверу
+плагины
+
+~Резюме~
+=bridge=: для обеспечения взаимодействия контейнеров, находящихся на одном хосте
+=host=: когда сетевой стек не должен быть изолирован от хоста
+=overlay=: для обеспечения взаимодействия контейнеров, находящихся на разных хостах, или для приложений, работающих вместе через групповые сервисы
+
+** Использование дефолтной сети bridge
+Сейчас мы запустим 2 контейнера =alpine= и посмотрим, как они могут взаимодействовать между собой.
+
+1. Открываем терминал и выполняем следующую команду:
+#+begin_src
+docker network ls
+#+end_src
+
+Получаем список сетей =bridge=, =host= и =none=.
+
+2. Запускаем 2 контейнера =alpine=.
+   =ash= - это дефолтный терминал =Alpine= (аналог =bash=).
+   Флаги =-dit= означают запуск контейнера в фоновом режиме (=-d=), интерактивно (чтобы дает возможность вводить команды) (=-i=) и с псевдотерминалом (чтобы видеть ввод и вывод) (=-t=).
+   Поскольку мы не указываем =--network=, контейнеры подключаются к дефолтной сети =bridge=:
+#+begin_src
+# контейнер номер раз
+docker run -dit --name alpine1 alpine ash
+
+# и номер два
+docker run -dit --name alpine2 alpine ash
+#+end_src
+
+Проверяем, что оба контейнера запущены:
+#+begin_src
+docker container ls
+# или
+docker ps
+#+end_src
+
+3. Анализируем сеть =bridge= на предмет подключенных к ней контейнеров:
+#+begin_src
+docker network inspect bridge
+#+end_src
+Видим созданные нами контейнеры в разделе "Containers" вместе с их IP-адресами (172.17.0.2 для alpine1 и 172.17.0.3 для =alpine2=).
+
+4. Подключаемся к alpine1:
+#+begin_src
+docker attach alpine1
+#+end_src
+Видим приглашение #, свидетельствующее о том, что мы являемся пользователем =root= внутри контейнера. Взглянем на сетевой интерфейс =alpine1=:
+#+begin_src
+id addr show
+#+end_src
+Первый интерфейс (=lo=) нас не интересует. Нас интересует IP-адрес второго интерфейса (172.17.0.2).
+
+5. Проверяем подключение к Интернету:
+#+begin_src
+ping -c 2 google.com
+#+end_src
+Флаг =-c 2= означает 2 попытки ping.
+
+6. Обратимся ко второму контейнеру. Сначала по IP-адресу:
+#+begin_src
+ping -c 2 172.17.0.3
+#+end_src
+Работает. Теперь попробуем обратиться по названию контейнера:
+#+begin_src
+ping -c 2 alpine2
+#+end_src
+
+Не работает.
+
+7. Останавливаем и удаляем контейнеры:
+#+begin_src
+docker container stop alpine1 alpine2
+docker container rm alpine1 alpine2
+#+end_src
+Обратите внимание: дефолтная сеть =bridge= не рекомендуется для использования в продакшне.
+
+** Использование кастомной сети bridge
+В следующем примере мы снова создаем 2 контейнера =alpine=, но подключаем их к кастомной сети =alpine-net=.
+Эти контейнеры не подключены к дефолтной сети =bridge=. Затем мы запускаем третий =alpine=, подключаемый к =bridge=, но не к =alpine-net=, и четвертый =alpine=, подключаемый к обеим сетям.
+
+1. Создаем сеть =alpine-net=.
+   Флаг =--driver bridge= можно опустить, поскольку =bridge= является сетью по умолчанию:
+#+begin_src
+docker network create --driver bridge alpine-net
+#+end_src
+
+2. Получаем список сетей:
+#+begin_src
+docker network ls
+#+end_src
+
+Анализируем сеть =alpine-net=:
+#+begin_src
+docker network inspect alpine-net
+#+end_src
+
+Получаем IP-адрес сети и пустой список подключенных контейнеров.
+Обратите внимание на =сетевой шлюз=, который отличается от шлюза =bridge=.
+
+4. Создаем 4 контейнера.
+   Обратите внимание на флаг =--network=.
+   При выполнении команды =docker run= мы можем подключить контейнер только к одной сети, поэтому подключение =alpine4= к =alpine-net= выполняется отдельно:
+#+begin_src
+docker run -dit --name alpine1 --network alpine-net alpine ash
+
+docker run -dit --name alpine2 --network alpine-net alpine ash
+
+docker run -dit --name alpine3 alpine ash
+
+docker run -dit --name alpine4 alpine ash
+# !
+docker network connect alpine-net alpine4
+#+end_src
+
+Получаем список запущенных контейнеров:
+#+begin_src
+docker ps
+#+end_src
+
+5. Анализируем =bridge= и =alpine-net=:
+#+begin_src
+docker network inspect bridge
+#+end_src
+
+Видим, что к данной сети подключены контейнеры =apline3= и =alpine4=.
+#+begin_src
+docker network inspect alpine-net
+#+end_src
+
+А к этой сети подключены контейнеры =alpine1=, =alpine2= и =alpine4=.
+
+6. В кастомных сетях контейнеры могут обращаться друг к другу не только по IP-адресам, но также по названиям. Данная возможность называется автоматическим обнаружением сервиса (=automatic service discovery=).
+   Подключаемся к =alpine1=:
+#+begin_src
+docker container attach alpine1
+
+ping -c 2 alpine2
+# success
+
+ping -c 2 alpine 4
+# success
+
+ping -c 2 alpine1
+# success
+#+end_src
+
+7. Пробуем обратиться к =alpine3=:
+#+begin_src
+ping -c 2 alpine3
+# failure
+#+end_src
+
+8. Отключаемся от =alpine1= и подключаемся к =alpine4=:
+#+begin_src
+docker container attach alpine4
+
+ping -c 2 alpine1
+# success
+
+ping -c 2 alpine2
+# success
+
+ping -c 2 alpine3
+# failure
+# но
+ping -c 2 172.17.0.2 # IP-адрес alpine3
+# success
+
+ping -c 2 alpine4
+# success
+#+end_src
+
+9. Все контейнеры могут подключаться к Интернету:
+#+begin_src
+ping -c 2 google.com
+# success
+#+end_src
+
+10. Останавливаем и удаляем контейнеры и сеть alpine-net:
+#+begin_src
+docker container stop alpine1 alpine2 alpine3 alpine4
+
+docker container rm alpine1 alpine2 alpine3 alpine4
+
+docker network rm alpine-net
+#+end_src
